[package]
name = "alarm-integral"
version = "0.1.0"
authors = ["Elichai Turkel <elichai.turkel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = { version = "0.9", default-features = false, features = ["smtp-transport" ] }
log = "0.4"
simplelog = { version = "0.6", default-features = false }
chrono = { version = "0.4", default-features = false }
dirs = "2.0"
signal-hook = "0.1.10"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"